(Bug 5798) Prevent overflow in the footer when there are no links
Simple pure CSS solution to a minor overflow bug.

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -521,7 +521,8 @@ div#footer {
 	border-top: 1px solid #fabd23;
 	border-bottom: 1px solid #fabd23;
 	margin: .6em 0 1em 0;
-	padding: .4em 0 1.2em 0;
+	overflow: hidden;
+	padding: .4em 0 .3em 0;
 	text-align: center;
 	font-size: 90%;
 }
